# minimal-tts

./: .gitignore  README.md  index.html  main.py  pyproject.toml
scripts/: install.ps1  install.sh  launch.ps1  launch.sh  uninstall.ps1  uninstall.sh
